<resources>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <!-- Request Invitation Screen -->
  <string name="app_name">Broccoli &amp; Co.</string>
  <string name="request_invite_subtitle">Request Beta Access Invitation</string>
  <string name="request_invite">Request</string>

  <!-- Request Invitation Dialog -->
  <string name="request_invite_dialog_subtitle">Enter your name and email to receive email invitations to the service.</string>
  <string name="full_name">Full Name</string>
  <string name="email">Email</string>
  <string name="confirm_email">Confirm Email</string>
  <string name="send">Send</string>
  <string name="error_minimum_characters">Full name should have at least 3 characters</string>
  <string name="error_email_mismatch">Email and Confirm Email do not match</string>
  <string name="error_invalid_email">Invalid email format</string>

  <!-- Invited Screen -->
  <string name="already_invited">You have already requested an invitation</string>
  <string name="cancel_invite">Cancel Request</string>

  <!-- Cancel Invitation Dialog -->
  <string name="cancel_invite_confirm">Are you sure to cancel the request</string>
  <string name="congratulations">Congratulations!</string>
  <string name="invite_cancelled">Invite cancelled</string>

  <!-- Error message -->
  <string name="error_unexpected_response">Something went wrong, please try again later</string>
</resources>
