<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/broccoli_bg"
  android:padding="16dp">

  <Button
    android:id="@+id/btn_request_invite"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_corner"
    android:elevation="4dp"
    android:text="@string/request_invite"
    android:textColor="@color/white"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txt_subtitle" />


  <ImageView
    android:id="@+id/img_broccoli"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginEnd="16dp"
    android:src="@drawable/ic_broccoli"
    app:layout_constraintBottom_toBottomOf="@id/btn_request_invite"
    app:layout_constraintEnd_toStartOf="@id/txt_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/txt_subtitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/request_invite_subtitle"
    android:textColor="#666666"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/img_broccoli"
    app:layout_constraintStart_toStartOf="@id/txt_title"
    app:layout_constraintTop_toBottomOf="@id/txt_title" />

  <TextView
    android:id="@+id/txt_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="#333333"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/btn_request_invite"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/img_broccoli"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>